# ZeroGL

./: CMakeLists.txt  Doxyfile  README.md
assets/lib/std/: animatedVertexShader.glsl  basicFragmentShader.glsl  basicVertexShader.glsl  curveFragmentShader.glsl  curveVertexShader.glsl  notAnimatedVertexShader.glsl  shadowmapFragmentShader.glsl  shadowmapVertexShader.glsl  skeletonFragmentShader.glsl  skeletonVertexShader.glsl
assets/lib/std/incl/: color.glsl  lighting.glsl
incl/zerogl/: Animation.hpp  Animation.tcc  Bone.hpp  Bone.tcc  Camera.hpp  Camera.tcc  Component.hpp  Component.tcc  Entity.hpp  Entity.tcc  IModel.hpp  IModel.tcc  Light.hpp  Light.tcc  Material.hpp  Material.tcc  Math.hpp  Math.tcc  Mesh.hpp  Mesh.tcc  Model.hpp  Model.tcc  ModelCurve.hpp  ModelCurve.tcc  Pose.hpp  Pose.tcc  Renderer.hpp  Renderer.tcc  Scene.hpp  Scene.tcc  Skeleton.hpp  Skeleton.tcc  ZeroGL.hpp  ZeroGL.tcc
incl/zerogl/curve/: BezierCurve.hpp  BezierCurve.tcc  ICurve.hpp  ICurve.tcc
incl/zerogl/loader/: Loader3D.hpp  Loader3D.tcc
incl/zerogl/mesh/: Agregate.hpp  Agregate.tcc  CubeMesh.hpp  CubeMesh.tcc  CurveMesh.hpp  CurveMesh.tcc  IMesh.hpp  IMesh.tcc  SquareMesh.hpp  SquareMesh.tcc  SurfaceMesh.hpp  SurfaceMesh.tcc
incl/zerogl/opengl/: ArrayBuffer.hpp  ArrayBuffer.tcc  FrameBuffer.hpp  FrameBuffer.tcc  OpenGL.hpp  OpenGL.tcc  ShaderProgram.hpp  ShaderProgram.tcc  Texture.hpp  Texture.tcc  VertexArray.hpp  VertexArray.tcc
incl/zerogl/surface/: BezierSurface.hpp  BezierSurface.tcc  ISurface.hpp  ISurface.tcc
src/example/: main.cpp
src/example1/: main.cpp
src/example2/: main.cpp
src/example3/: main.cpp
src/test/: main.cpp
src/zerogl/: Animation.cpp  Bone.cpp  Camera.cpp  Component.cpp  Entity.cpp  IModel.cpp  Light.cpp  Material.cpp  Math.cpp  Mesh.cpp  Model.cpp  ModelCurve.cpp  Pose.cpp  Renderer.cpp  Scene.cpp  Skeleton.cpp  ZeroGL.cpp
src/zerogl/curve/: BezierCurve.cpp  ICurve.cpp
src/zerogl/loader/: Loader3D.cpp
src/zerogl/mesh/: Agregate.cpp  CubeMesh.cpp  CurveMesh.cpp  IMesh.cpp  SquareMesh.cpp  SurfaceMesh.cpp
src/zerogl/opengl/: ArrayBuffer.cpp  FrameBuffer.cpp  OpenGL.cpp  ShaderProgram.cpp  Texture.cpp  VertexArray.cpp
src/zerogl/surface/: BezierSurface.cpp  ISurface.cpp
